--- a/localisation/aml_focus_l_english.yml
+++ b/localisation/aml_focus_l_english.yml
@@ -213,25 +213,25 @@
  MUU_new_elite:1 "A New Elite"
  MUU_new_elite_desc:1 ""
  MUU_national_holidays:1 "National Holidays"
- MUU_national_holidays_desc:1 ""
+ MUU_national_holidays_desc:1 ">>>>>>>>>Here they are supposed to make a lot of overly nationalistic festivals<<<<<<<<<"
  MUU_one_people:1 "One Muror People"
- MUU_one_people_desc:1 ""
+ MUU_one_people_desc:1 ">>>>>>>>>this is where we start justifying war against other muror countries<<<<<<<<<"
  MUU_development_ministry:1 "Create the Ministry of Development"
  MUU_development_ministry_desc:1 ""
- MUU_nonaligned_mil1:1 ">placeholder for mil1<"
- MUU_nonaligned_mil1_desc:1 ""
- MUU_nonaligned_mil2:1 ">placeholder for mil2<"
- MUU_nonaligned_mil2_desc:1 ""
- MUU_nonaligned_milciv1:1 ">placeholder for milciv1<"
+ MUU_nonaligned_mil1:1 "A Loyal Army"
+ MUU_nonaligned_mil1_desc:1 "Our Army has become the model for our neighbors, and their loyalty is unmatched."
+ MUU_nonaligned_mil2:1 "The People's Unbreakable Spirit"
+ MUU_nonaligned_mil2_desc:1 "Millenia of continued aggression from foreigner invaders forged an unyielding and resilient people. Every man shall fight to the bitter end and the civilians are expected to turn our enemy's stay in the Muror lands a living nightmare!"
+ MUU_nonaligned_milciv1:1 "Expand the Military Industries"
  MUU_nonaligned_milciv1_desc:1 ""
- MUU_nonaligned_milciv2:1 ">placeholder for milciv1<"
+ MUU_nonaligned_milciv2:1 "The Empire's Dockyards"
  MUU_nonaligned_milciv2_desc:1 ""
- MUU_nonaligned_civ1:1 ">placeholder for civ1<"
+ MUU_nonaligned_civ1:1 "Heavy Machinery and Industries"
  MUU_nonaligned_civ1_desc:1 ""
- MUU_nonaligned_civ2:1 ">placeholder for civ1<"
- MUU_nonaligned_civ2_desc:1 ""
+ MUU_nonaligned_civ2:1 "The Dustartajare Industrial Complex"
+ MUU_nonaligned_civ2_desc:1 "Our geologists found an endless deposit of coal and bauxite in Dustartajare. It is expected to be enough to kickstart the construction of coal power plants that will supply the massive energy requirements of aluminum refineries."
  MUU_nonaligned_final:1 "A Beacon of Light"
- MUU_nonaligned_final_desc:1 ""
+ MUU_nonaligned_final_desc:1 ">>>>>>>>>Write some GLORIOUS thing here about how the Muror are amazing and how their empire is the most beautiful thing to ever grace the surface of this planet<<<<<<<<<"
  MUU_westernization:1 "Westernization"
  MUU_westernization_desc:1 ""
  MUU_voice_public:1 "Voice of the People"
