--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2505,38 +2505,6 @@
  polymer_corporation:0 "Polymer Corporation"
  inglis_company:0 "John Inglis and Company"
  small_arms_limited:0 "Small Arms Limited"
- GEQ_scientific_backlog:0 "Scientific Backlog"
- GEQ_scientific_backlog_desc:0 "We have an issue with a proper science base to help advance our technologies."
- GEQ_murorian_supremacy:0 "Geqian Supremacy"
- GEQ_murorian_supremacy_desc:0 "The Muror people of Geq consider themselves the 'masterrace' and are against immigration. This enflames a sense of duty to serve for nation."
- GEQ_murorian2_supremacy:0 "Murorian Sepremacy"
- GEQ_murorian2_supremacy_desc:0 "The Muror people of Geq consider themselves the 'masterrace' and are against immigration. This enflames a sense of duty to serve for nation."
- GEQ_resurrect_the_empire_of_mug:0 "Muroran Monarchist Support"
- GEQ_resurrect_the_empire_of_mug_desc:0 "We are supporting a monarchy, to lead the new Empire of Mu."
- GEQ_support_muror_unification_groups_across_mu:0 "Muror Influences"
- GEQ_support_muror_unification_groups_across_mu_desc:0 "Former Geq, the Empire of Mu is influencing our politics, by supporting political parties that would wish to unify with them, and support of a monarchy."
- GEQ_invest_in_recruitment_tactics:0 "Invest in Recruiting Tactics"
- GEQ_invest_in_recruitment_tactics_desc:0 "We are investing in recruiting new soldiers, that are envigorated to fight for nation!"
- GEQ_invest_in_espionage:0 "Invest in Espionage"
- GEQ_invest_in_espionage_desc:0 "We are investing in espionage."
- GEQ_communist_influences:0 "Communist Influences"
- GEQ_communist_influences_desc:0 "Someone is supporting communist parties in our nation."
- GEQ_ifyourreadingthisyourepic:0 "Under British Protection"
- GEQ_ifyourreadingthisyourepic_desc:0 "If any nation attacks us Britain will have an option to invite us to the Allies."
- GEQ_newly_formed_state:0 "Newly Formed State"
- GEQ_newly_formed_state_desc:0 "We are a newly formed state, and we need to address our internal issues before looking outward."
- GEQ_prepare_to_retake_the_southe:0 "Prepare to Retake The South"
- GEQ_prepare_to_retake_the_southe_desc:0 "We must ready our armies for an invasion of our southern lands!"
- GEQ_embrace_geqian_militarism:0 "Embrace Geqian Militarism"
- GEQ_embrace_geqian_militarism_desc:0 ""
- GEQ_support_the_nuclear_family:0 "Support the Middle Class"
- GEQ_support_the_nuclear_family_desc:0 "We are investing subsidies in the middle class, which is allowing more people to have more children."
- GEQ_ditch_science:0 "Ditch Science"
- GEQ_ditch_science_desc:0 "We have decided to not support any sort of sciences, instead we support industrial development."
- GEQ_geq_bonus:0 "Geqian Army Standards"
- GEQ_geq_bonus_desc:0 "The Geqian people live in an enviorment with many different terrains, this has allowed them to endure in the toughest of situations."
- GEQ_jap_bonus:0 "Japanese Naval Aid"
- GEQ_jap_bonus_desc:0 "We have gotten Japanese naval production, and development aid."
 
 FSM_unfair_sufferage:0 "Unfair Suffrage"
 FSM_associate_state:0 "The Associate State"
@@ -2544,3 +2512,18 @@ FSM_fascist_sympathizers:0 "Fascist Sympathizers"
 FSM_sanctions:0 "Versailles Sanctions"
 FSM_companies:0 "Colonial Companies"
 FSM_companies_desc:0 "Since the early 19th century, the FSM has ran it's own stock-holding trade company, the German South Mu Company. Together with the numerous plantation and production companies owned by wealthy German families, it makes up the backbone of our economy."
+
+
+01_MUU_tt:0 "§gUnlocks decisions to Develop Dustartajare's Industrial Complex§ \n"
+dustartajare_developed:0 "Dustartajare's Industrial Complex"
+MUU_government_purges_happening:0 "Government Purges Happening"
+MUU_extended_conscription:0 "Extended Conscription"
+MUU_purge_fascists:0 "Fascism Purged"
+MUU_civic_education_idea:0 "Civic Education"
+MUU_ministry_of_defense:0 "Ministry of Defense"
+MUU_ministry_of_development:0 "Ministry of Development"
+MUU_persecuting_democrats:0 "Persecuting Democrats"
+MUU_national_holidays:0 "Celebrating National Holidays"
+MUU_mil_1:0 "A Loyal Army"
+MUU_mil_2:0 "Unbreakable Spirit"
+MUU_restored_empire:0 "Restored Empire"
