--- a/localisation/aml_focus_l_english.yml
+++ b/localisation/aml_focus_l_english.yml
@@ -213,9 +213,9 @@
  MUU_new_elite:1 "A New Elite"
  MUU_new_elite_desc:1 ""
  MUU_national_holidays:1 "National Holidays"
- MUU_national_holidays_desc:1 ">>>>>>>>>Here they are supposed to make a lot of overly nationalistic festivals<<<<<<<<<"
+ MUU_national_holidays_desc:1 "'Our people toil gloriously but endlessly; why should they not celebrate the holy days? Did the gods not command us to observe those sacred days? We we not given days for merriment and enjoyment? The Muror are a blessed people and we should celebrate this!' - Anaderuq Hullamru of House Jashunat"
  MUU_one_people:1 "One Muror People"
- MUU_one_people_desc:1 ">>>>>>>>>this is where we start justifying war against other muror countries<<<<<<<<<"
+ MUU_one_people_desc:1 "'The Muror are one people. The years of division and dissention must be brought to an end! We are one people! No other nation, no other people, are as glorious or as blessed as we Muror! We must bring back the rebellious groups now!' - Unturq Dhizhmit of House Navgollu"
  MUU_development_ministry:1 "Create the Ministry of Development"
  MUU_development_ministry_desc:1 ""
  MUU_nonaligned_mil1:1 "A Loyal Army"
@@ -231,7 +231,7 @@
  MUU_nonaligned_civ2:1 "The Dustartajare Industrial Complex"
  MUU_nonaligned_civ2_desc:1 "Our geologists found an endless deposit of coal and bauxite in Dustartajare. It is expected to be enough to kickstart the construction of coal power plants that will supply the massive energy requirements of aluminum refineries."
  MUU_nonaligned_final:1 "A Beacon of Light"
- MUU_nonaligned_final_desc:1 ">>>>>>>>>Write some GLORIOUS thing here about how the Muror are amazing and how their empire is the most beautiful thing to ever grace the surface of this planet<<<<<<<<<"
+ MUU_nonaligned_final_desc:1 "'The gods have given us this bountiful land. They have provided us with our beautiful language. They have made us a beautiful people. Why then should we look to others when others should look to us? Ours is the glorious future! We shall be a beacon of light to the world!' - Vashutzaq Nalleshut of House Thallazhhem"
  MUU_westernization:1 "Westernization"
  MUU_westernization_desc:1 ""
  MUU_voice_public:1 "Voice of the People"
