geq tree updates
started the democracy tree

--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2559,3 +2559,5 @@
  GEQ_geq_bonus_desc:0 "The Geqian people live in an enviorment with many different terrains, this has allowed them to endure in the toughest of situations."
  GEQ_jap_bonus:0 "Japanese Naval Aid"
  GEQ_jap_bonus_desc:0 "We have gotten Japanese naval production, and development aid."
+ GEQ_democratic_popularity_spreading:0 "Democracy Spreading"
+ GEQ_democratic_popularity_spreading_desc:0 "The people of our country are spreadng the ideology of democracy."
