updated fascist geq coring system
it is better now

--- a/localisation/AML_decisions_l_english.yml
+++ b/localisation/AML_decisions_l_english.yml
@@ -67,3 +67,15 @@
  
  MNU_fascist_uprising:0 "Coup the Administration"
  MNU_fascist_uprising_desc:0 "Saxonia Austral was a settlement formed on ideals of strength and independence. We will not let the puppet regime of the FSM rule us any longer. ++++note to self add more+++"
+ GEQ_fascist_coring:0 "Core Territory"
+ GEQ_fascist_coring_desc:0 "We will send in people and resources to core our territory."
+ GEQ_core_vashparaq:0 "Core Vashparaq"
+ GEQ_core_vashparaq_desc:0 "We will send in people and resources to core Vashparaq."
+ GEQ_core_NCA:0 "Core New Caledonia"
+ GEQ_core_NCA_desc:0 "We will send in people and resources to core New Caledonia."
+ GEQ_core_NLI:0 "Core New Livonia"
+ GEQ_core_NLI_desc:0 "We will send in people and resources to core New Livonia."
+ GEQ_core_NHI:0 "Core New Hibernia"
+ GEQ_core_NHI_desc:0 "We will send in people and resources to core New Hibernia."
+ GEQ_core_the_lezam_hills:0 "Core the Lezam Hills"
+ GEQ_core_the_lezam_hills_desc:0 "We will send in people and resources to core the Lezam Hills."
