--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -1,6 +1,18 @@
 ﻿l_english:
- 01_MUU_tt:0 "§gUnlocks decisions to Develop Dustartajare's Industrial Complex§ \n"
+ 01_MUU_tt:0 "§gUnlocks decisions to develop Dustartajare's Industrial Complex§ \n"
+ 01_MUU_marsh:0 "§gUnlocks decisions to reclaim land in the Hadu Sea's marshes § \n"
+ 
+ 
+ 
  dustartajare_developed:0 "Dustartajare's Industrial Complex"
+ 
+ MUU_MOO_fascism:0 "Ujjuqji Muror"
+ MUU_MOO_fascism_DEF:0 "Ujjuqji Muror"
+ MUU_MOO_neutrality:0 "Myuqujjuq Muror"
+ MUU_MOO_neutrality_DEF:0 "Myuqujjuq Muror"
+ 
+ 
+ 
  MUU_rural_isolation:0 "Rural Population Isolated"
  MUU_government_purges_happening:0 "Government Purges Happening"
  MUU_extended_conscription:0 "Extended Conscription"
@@ -16,4 +28,12 @@
  MUU_westernization:0 "Westernization"
  MUU_extend_voting_rights:0 "Extended Voting Rights"
  MUU_economic_reforms:0 "Economic Reforms"
- 
+ MUU_volunteers:0 "Help the Class Struggle Abroad"
+ MUU_develop_poor:0 "Develop the Poor Regions"
+ MUU_land_reclamation:0 "Land Reclamation Projects"
+ MUU_reform_religion:0 "Reforming Religion"
+ MUU_persecute_religion:0 "Persecuting the Religious Leaders"
+ MUU_state_above_all:0 "State Above All"
+ MUU_fascist_conscription:0 "Forced Conscription"
+ MUU_fascist_mobilization:0 "Mobilization of the Economy"
+ MUU_existential_war:0 "An Existential War"
