--- a/localisation/aml_focus_l_english.yml
+++ b/localisation/aml_focus_l_english.yml
@@ -196,7 +196,7 @@
  MUU_impeach_ollun_desc:1 "'The Upper and Lower Chambers have spoken. He brought this terrible ruin on our nation through his folly! Ollun must go!' - Aztaj Darjetaq of House Oqzur "
  MUU_old_system:1 "The Old System"
  MUU_old_system_desc:1 "'Ujjamun Nalangqu, our thrice blessed leader, has celebrated his 70th turn around Hu. He was pressured by House Gahrijjeom to bring in ideas from the vaunted Western Powers. While some have benefitted us much of the rest has been harmful or wasteful. Perhaps if he had more control again in the ruling of our great nation he could fix some of these problems.' - Dashutun Gusallu of House Vedzagra"
- MUU_power_ojjamun:1 "Power to the Ojjamun"
+ MUU_power_ojjamun:1 "Power to the Ujjamun"
  MUU_power_ojjamun_desc:1 "'The people have spoken and we agree with them. We must return to the days of glory when the Ujjamun ruled from the Qiedil Throne!' - Nurq Tapanggu of House Owastim "
  MUU_purge_fascists:1 "Purge the Fascist Faction"
  MUU_purge_fascists_desc:1 ""
