--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -2,6 +2,9 @@
  01_MUU_tt:0 "§gUnlocks decisions to develop Dustartajare's Industrial Complex§ \n"
  01_MUU_marsh:0 "§gUnlocks decisions to reclaim land in the Hadu Sea's marshes § \n"
  
+ marsh_infantry:0 "Detachable Floaters"
+ marsh_motorized:0 "Watertight Seals"
+ marsh_armor:0 "River Fording"
  
  
  dustartajare_developed:0 "Dustartajare's Industrial Complex"
@@ -14,6 +17,7 @@
  
  
  MUU_rural_isolation:0 "Rural Population Isolated"
+ MUU_rural_guerrillas:0 "Rural Communist Guerrillas"
  MUU_government_purges_happening:0 "Government Purges Happening"
  MUU_extended_conscription:0 "Extended Conscription"
  MUU_purge_fascists:0 "Fascism Purged"
@@ -37,3 +41,12 @@
  MUU_fascist_conscription:0 "Forced Conscription"
  MUU_fascist_mobilization:0 "Mobilization of the Economy"
  MUU_existential_war:0 "An Existential War"
+ MUU_exterminate_commies:0 "Exterminating the Communists"
+ MUU_suppress_commies:0 "Suppressing the Socialist Leadership"
+ MUU_integrate_commies:0 "Integrating the Left Wing"
+ MUU_embrace_commies:0 "Embracing the Revolution"
+ MUU_bribing_politicians:0 "Bribing Politicians"
+ MUU_control_cities:0 "Cities Under Control"
+ MUU_special_forces:0 "The Grave of the Invaders"
+ MUU_inirliq_airfield1:0 "Inirliq Research Airbase"
+ MUU_inirliq_airfield2:0 "Inirliq Research Airbase"
