--- a/localisation/aml_focus_l_english.yml
+++ b/localisation/aml_focus_l_english.yml
@@ -388,7 +388,7 @@
  MUU_tac_bomber_desc:1 ""
  MUU_strat_bomber:1 "Aparuqur Ijuaz"
  MUU_strat_bomber_desc:1 ""
- MUU_experimental_airfield:1 "The Inirliq Experimental Airfield"
+ MUU_experimental_airfield:1 "The Inirliq Research Airbase"
  MUU_experimental_airfield_desc:1 ""
  MUU_expand_airfield:1 "Expand the Operations"
  MUU_expand_airfield_desc:1 ""
