geq tree updates

--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2505,3 +2505,9 @@
  polymer_corporation:0 "Polymer Corporation"
  inglis_company:0 "John Inglis and Company"
  small_arms_limited:0 "Small Arms Limited"
+ GEQ_democratic_popularity_spreading:0 "Support Equality"
+ GEQ_democratic_popularity_spreading_desc:0 ""
+ GEQ_secure_democracy:0 "Stabilize the New State"
+ GEQ_secure_democracy_desc:0 "We will stabilize the newly formed democratic Geq."
+ GEQ_bring_in_capitalism:0 "Bring in Capitalism"
+ GEQ_bring_in_capitalism_desc:0 "We are incorporating capitalist ways into our economy."
