lots of loc stuff for the tree

--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -3,10 +3,19 @@
  FSM_associate_state:0 "The Associate State"
  FSM_fascist_sympathizers:0 "Fascist Sympathizers"
  FSM_sanctions:0 "Versailles Sanctions"
+ FSM_sanctions_modified:0 "Versailles Sanctions"
  FSM_companies:0 "Colonial Companies"
  FSM_companies_desc:0 "Since the early 19th century, the FSM has ran it's own stock-holding trade company, the German South Mu Company. Together with the numerous plantation and production companies owned by wealthy German families, it makes up the backbone of our economy."
-
-
- 
-
- 
+ FSM_companies_open_stocks:0 "Colonial Companies"
+ FSM_companies_open_stocks_desc:0 "Since the early 19th century, the FSM has ran it's own stock-holding trade company, the German South Mu Company. Together with the numerous plantation and production companies owned by wealthy German families, it makes up the backbone of our economy."
+ FSM_companies_kohn:0 "Colonial Companies"
+ FSM_companies_kohn_desc:0 "Since the early 19th century, the FSM has ran it's own stock-holding trade company, the German South Mu Company. Together with the numerous plantation and production companies owned by wealthy German families, it makes up the backbone of our economy."
+ FSM_companies_open_stocks_military:0 "Colonial Companies"
+ FSM_companies_open_stocks_military_desc:0 "Since the early 19th century, the FSM has ran it's own stock-holding trade company, the German South Mu Company. Together with the numerous plantation and production companies owned by wealthy German families, it makes up the backbone of our economy."
+ FSM_companies_open_stocks_civilian:0 "Colonial Companies"
+ FSM_companies_open_stocks_civilian_desc:0 "Since the early 19th century, the FSM has ran it's own stock-holding trade company, the German South Mu Company. Together with the numerous plantation and production companies owned by wealthy German families, it makes up the backbone of our economy."
+ FSM_companies_kohn_military:0 "Colonial Companies"
+ FSM_companies_kohn_military_desc:0 "Since the early 19th century, the FSM has ran it's own stock-holding trade company, the German South Mu Company. Together with the numerous plantation and production companies owned by wealthy German families, it makes up the backbone of our economy."
+ FSM_companies_kohn_civilian:0 "Colonial Companies"
+ FSM_companies_kohn_civilian_desc:0 "Since the early 19th century, the FSM has ran it's own stock-holding trade company, the German South Mu Company. Together with the numerous plantation and production companies owned by wealthy German families, it makes up the backbone of our economy."
+ FSM_maywerken:0 "Maywerken" 
