--- a/localisation/focus_l_english.yml
+++ b/localisation/focus_l_english.yml
@@ -2323,14 +2323,42 @@
  FSM_brotherhood:1 "Brotherhood"
  FSM_brotherhood_desc:1 "__placeholder____"
  FSM_sieze_fjinland:1 "Seize Fjinland"
- FSM_sieze_fjinland_desc:1 "__placeholder____"
+ FSM_sieze_fjinland_desc:1 "It has become increasingly clear the Dutch are incapable of administering their colonies. We would be doing them a favour by taking the nearby Fjinland off their hands."
  FSM_ban_japanese_immigration:1 "Ban Japanese Immigration"
  FSM_ban_japanese_immigration_desc:1 "__placeholder____"
  FSM_join_allies:1 "Join Allies"
- FSM_join_allies_desc:1 "__placeholder____"
-
-
-
+ FSM_join_allies_desc:1 "Only a blind fool would stand on the wrong side of history! As the world is taken by storm with radical ideologies, the Allies represent a promise of democratic freedom and stability. Joining them would protect us, and help us fight for a more liberal world!"
+ FSM_nationalize_plantations:1 "Nationalize Plantations"
+ FSM_nationalize_plantations_desc:1 "Too many privately owned plantations in this nation exploit their workers, then stash the profits in vast family vaults, only growing richer. The money of the hardworking Freistaater should help develop the nation! By forcing some of these plantations to pay more taxes and lend land to the government, we can mitigate this inequality."
+ FSM_request_new_guinea_desc:1 "After the Great War, the German Colony of Papua and New Guinea made its way into the hands of the Australian’s. As part of rightful German territory, we have the right to demand it back immediately. The colony could be a potential key asset in the Austral Sea, a first line of defense against both America and the Japanese."
+ FSM_subsidize_colonial_companies:1 "Subsidize Colonial Companies"
+ FSM_subsidize_colonial_companies_desc:1 "The German companies are becoming a significant player as we industrialize. The government should strive to support it’s nation’s big businesses."
+ FSM_join_axis:1 "Join The Axis"
+ FSM_join_axis_desc:1 "Despite being scattered all over the world, the German people will achieve victory through cooperation. It is our obligation to join the Third Reich’s cause, and help them both at home and abroad."
+ FSM_antarctic_expedition:1 "Antarctic Expedition"
+ FSM_antarctic_expedition_desc:1 "The southern continent has remained elusive. Cold conditions, relentless snowstorms, and lack of civilization means that no one has attempted to reach the south pole again since 1911. If we can claim the silver medal for this accomplishment with an even bolder expedition, we can be sure to receive admiration among the scientific community."
+ FSM_centralize:1 "Centralize"
+ FSM_centralize_desc:1 "As it stands now, our nation is divided; too many regulations differ between the states, and agreement is inconsistent. A strong nation needs a centralized government and an clear vision for the future. We must reform the government, and make sure everyone gets an equal treatment under the Freistaaten law, from every Ottostaater to Wüstenlander."
+ FSM_american_union:1 "A More American Union"
+ FSM_american_union_desc:1 "The union system of the FSM is vague and unclear. While at its core, the Staats are established as distinct administrative entities, they in practice rarely find the power to make their own laws. The USA is wildly successful, in part because they had given all of their states equal speak in the nations future, and plenty of self-determination. We must model our system on this to improve."
+ FSM_recognize_dutch:1 "Recognize Dutch"
+ FSM_recognize_dutch_desc:1 "While the FSM has always been German at its core, it’s important we don’t forget our roots under the crown of the Netherlands. Many Freistaater have Dutch roots, and still speak the language at home. We should fully embrace our identity and recognize Dutch as a second official language."
+ FSM_admit_gdea:1 "Admit The GdEA Into Parliament"
+ FSM_admit_gdea_desc:1 "The Gesellschaft see Einheimischen Arbeiter has in recent years risen to prominance as a major political player. Pushing for native rights and a more socialist system, they have been a nuisance, but made strides in accomplishing their goal. Perhaps it’s time to face the music, and let the Native communists pursue their mission as an official political party."
+ FSM_negotiate_sanctions:1 "Negotiate The Sanctions"
+ FSM_negotiate_sanctions_desc:1 "Nearly 20 years have passed since the end of the Great War, and the FSM has been a model nation. Despite the hard hit we took, we have continued to grow, and we have been on good terms with the British and French. We are in a good position to request renegotiation of the steep sanctions placed on us."
+ FSM_claims_on_antarctica:1 "Claims On Antarctica"
+ FSM_claims_on_antarctica_desc:1 "We have boldly gone where men weaker men have feared to go! The southern continent may be devoid of resources, but it is land nonetheless, to which we have a rightful claim! No reaches of the world are too dangerous for a Freistaater!"
+ FSM_communist_hunt:1 "Hunt Down The Communists"
+ FSM_communist_hunt_desc:1 "The claws of socialism have reached us too, and tug on our curtails like a demented monster. Deranged exiles from the homeland conspire with the rowdy and dangerous natives to bring the shadows of revolution to Mu. As long as they stand, we cannot rest easy. No home will go unchecked anymore."
+ FSM_maywerken:1 "Maywerken"
+ FSM_maywerken_desc:1 "The industry of the FSM is well oiled machine. The experiences of Europe has taught us that transportation and communication are key factors in the smoothness of production. The Maywerken will be a major undertaking: a nationwide board of over 30 companies from different industries, subsidized by the government, and convened with the purpose of simplifying deals, constructing new railways and roads, and overwatching the production of goods all the way from raw material to the port."
+ FSM_allied_research_bonus:1 "Joint Research"
+ FSM_allied_research_bonus_desc:1 "Our good relations with the nations of the commonwealth could perhaps give us access to some of the top minds of the scientific and engineering community."
+ FSM_military_companies:1 "Military Companies"
+ FSM_military_companies_desc:1 "We can no longer ignore the looming threat of global war. Just as all the other great powers have, we must shift our economy to producing military gear. Only well armed can we survive the oncoming storm, and make a name for ourselves in history."
+ FSM_civilian_companies:1 "Civilian Companies"
+ FSM_civilian_companies_desc:1 "Our economy has always enjoyed the greatest boons from exporting raw materials and food products. The war is far away from us, so while the great powers clash, our economy can prosper on civilian goods."
 
 
  TOD_start:1 "Organize the Government"
